telemetry/derive/tests/ui_fail/not_return_result.stderr
error: Should return `Result`. Found RESULT
 --> tests/ui_fail/not_return_result.rs:5:57
  |
5 | fn execute(_wsv: &WorldStateView<World>) -> iroha_core::RESULT {
  |                                                         ^^^^^^
